--- a/kubernetes-config/web-deployment-v2.yaml
+++ b/kubernetes-config/web-deployment-v2.yaml
@@ -3,21 +3,21 @@ kind: Deployment
 metadata:
  labels:
    app: events-web
- name: events-web
+ name: events-web-v1.0
 spec:
- replicas: 2
+ replicas: 1
  selector:
    matchLabels:
      app: events-web
-     ver: v2.0
+     ver: v1.0
  template:
    metadata:
      labels:
        app: events-web
-       ver: v2.0
+       ver: v1.0
    spec:
      containers:
-     - image: gcr.io/roidtc-august22-u210/events-website:v2.0
+     - image: gcr.io/roidtc-august22-u210/events-website:v1.0
        name: events-web
        ports:
        - containerPort: 8080
